# opengltutor

./: .gitignore  .rgignore  CMakeLists.txt  README.md  main.cpp
assets/: orange.frag  orange.vert  points.frag  points.vert
glad/: CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeLists.txt
glm/: CMakeLists.txt
include/: ASCIIFontData.hpp  Components.hpp  ECS.hpp  GLRAII.hpp  Game.hpp  Image.hpp  InputCtl.hpp  KeyBinding.hpp  OBJ.hpp  Points.hpp  SparseVec.hpp  check_gl.hpp  gl_attribs.hpp  print.hpp  simple_graphic.h
src/: ASCIIFontData.cpp  Game.cpp  Image.cpp  InputCtl.cpp  OBJ.cpp  Points.cpp  check_gl.cpp  fileutils.hpp  main.cpp
